01/11 Fixed Top Bar Gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,7 @@ h6 { font-size: 3vw; line-height: normal;}
 }
 
 .contain {
-    margin: 0 5em 0 5em;
+    margin: 7vh 5em 0 5em;
     position: relative;
     z-index: 95;
 }
@@ -259,7 +259,7 @@ h6 { font-size: 3vw; line-height: normal;}
 
 .main-content {
     width: 100%;
-    margin: 50px 0 0 0; 
+    margin: 0 0 0 0; 
 }
 
 .main-gap {
